--- a/NancyWebsite/bin/NancyWebsite.dll.config
+++ b/NancyWebsite/bin/NancyWebsite.dll.config
@@ -9,6 +9,13 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="SmtpHost" value="relay-hosting.secureserver.net" />
+    <add key="SmtpPort" value="25" />
+    <add key="MailAddress" value="enquiry@ampleblr.com" />
+    <add key="MailPassword" value="Ample123$" />
+    <add key="IsEnableSsl" value="false" />
+    <add key="MailTimeout" value="10000" />
+    <add key="To" value="shashi@ampleblr.com" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
