--- a/NancyWebsite/Web.config
+++ b/NancyWebsite/Web.config
@@ -9,6 +9,13 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="SmtpHost" value="relay-hosting.secureserver.net" />
+    <add key="SmtpPort" value="25" />
+    <add key="MailAddress" value="" />
+    <add key="MailPassword" value="" />
+    <add key="IsEnableSsl" value="false" />
+    <add key="MailTimeout" value="10000" />
+    <add key="To" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
