--- a/NancyWebsite/NancyWebsite.csproj
+++ b/NancyWebsite/NancyWebsite.csproj
@@ -138,7 +138,8 @@
     <Content Include="Content\style.css" />
     <Content Include="Content\swiper-bundle.min.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\boxicons.svg" />
+    <Content Include="img\background1.png" />
+    <Content Include="img\fonts\boxicons.svg" />
     <Content Include="Global.asax" />
     <Content Include="img\background.png" />
     <Content Include="img\blog\blog-1.jpg" />
@@ -166,8 +167,11 @@
     <Content Include="img\clients\client-6.png" />
     <Content Include="img\clients\client-7.png" />
     <Content Include="img\clients\client-8.png" />
+    <Content Include="img\clients\client-9.png" />
+    <Content Include="img\favicon.png" />
     <Content Include="img\hero-bg.jpg" />
     <Content Include="img\hero.png" />
+    <Content Include="img\logo-transparent.png" />
     <Content Include="img\Logo.png" />
     <Content Include="img\nancyfav.png" />
     <Content Include="img\portfolio\portfolio-1.jpg" />
@@ -182,6 +186,11 @@
     <Content Include="img\portfolio\portfolio-details-1.jpg" />
     <Content Include="img\portfolio\portfolio-details-2.jpg" />
     <Content Include="img\portfolio\portfolio-details-3.jpg" />
+    <Content Include="img\process-diagram2.png" />
+    <Content Include="img\s1.png" />
+    <Content Include="img\s2.png" />
+    <Content Include="img\s3.png" />
+    <Content Include="img\shape-2.png" />
     <Content Include="img\tabs-1.jpg" />
     <Content Include="img\tabs-2.jpg" />
     <Content Include="img\tabs-3.jpg" />
@@ -231,15 +240,15 @@
     <Content Include="Content\fonts\remixicon.less" />
     <Content Include="Content\fonts\remixicon.woff" />
     <Content Include="Content\fonts\remixicon.woff2" />
-    <Content Include="fonts\bootstrap-icons.woff" />
-    <Content Include="fonts\bootstrap-icons.woff2" />
-    <Content Include="fonts\boxicons.eot" />
-    <Content Include="fonts\boxicons.ttf" />
-    <Content Include="fonts\boxicons.woff" />
-    <Content Include="fonts\remixicon.less" />
-    <Content Include="fonts\boxicons.woff2" />
-    <Content Include="fonts\remixicon.woff" />
-    <Content Include="fonts\remixicon.woff2" />
+    <Content Include="img\fonts\bootstrap-icons.woff" />
+    <Content Include="img\fonts\bootstrap-icons.woff2" />
+    <Content Include="img\fonts\boxicons.eot" />
+    <Content Include="img\fonts\boxicons.ttf" />
+    <Content Include="img\fonts\boxicons.woff" />
+    <Content Include="img\fonts\remixicon.less" />
+    <Content Include="img\fonts\boxicons.woff2" />
+    <Content Include="img\fonts\remixicon.woff" />
+    <Content Include="img\fonts\remixicon.woff2" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
   </ItemGroup>
